[project]
name = "ap-gnss-stats"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "aiofiles>=0.8.0",
    "netmiko>=4.1.0",
    "prometheus-client>=0.14.0",
    "python-dateutil>=2.8.2",
    "python-dotenv>=0.19.0",
    "requests>=2.28.0",
]
